syntax = "proto3";
option go_package = "github.com/SpeedReach/monify";


service AuthService{
  rpc EmailLogin(EmailLoginRequest) returns (EmailLoginResponse) {}
  rpc EmailRegister(EmailRegisterRequest) returns (EmailRegisterResponse) {}
}


message EmailLoginRequest{
  string email = 1;
}


message EmailLoginResponse{
  string userId = 1;
  string access_token = 2;
  string refresh_token = 3;
}


message EmailRegisterRequest{
  string email = 1;
}

message EmailRegisterResponse{
  string userId = 1;
}
